[EFL][WK2] ewk_popup_menu_close() does not work as intended https://bugs.webkit.org/show_bug.cgi?id=110209

Reviewed by Laszlo Gombos.

ewk_popup_menu_close() is called by the browser to notify WebKit that
the popup menu was closed. However, the implementation was calling
EwkView::closePopupMenu() which was asking the browser to close the
popup menu via an Evas smart function. This patch fixes the behavior
and ewk_popup_menu_close() now calls WKPopupMenuListenerSetSelection()
C API so that the WebProcess is notified that the popup menu was
hidden.

* UIProcess/API/efl/ewk_popup_menu.cpp:
(EwkPopupMenu::close):


Canonical link: https://commits.webkit.org/130538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145676 268f45cc-cd09-0410-ab3c-d52691b4dbfc